<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="layout.quiz.view.FormCadastro">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_form_cadastro"
        android:textSize="25sp"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        />
    <EditText
        android:id="@+id/Edit_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"
        android:padding="15dp"
        android:maxLines="1"
        android:inputType="textEmailAddress"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"/>
    <EditText
        android:id="@+id/Edit_senha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_senha"
        android:padding="15dp"
        android:maxLines="1"
        android:inputType="textPassword"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"/>
    
    <Button
        android:id="@+id/botao_cadastrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_botao_cadastrar"
        android:padding="15dp"
        android:layout_margin="20dp"/>
    <TextView
        android:id="@+id/txt_telaLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_form_login"
        android:layout_marginStart="25dp"/>

</LinearLayout>