<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SelectQuiz">

    <TextView
        android:id="@+id/nome_usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="25sp"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        />

    <Button
        android:id="@+id/botao_comecar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/comecar_quiz"
        android:padding="15dp"
        android:layout_margin="20dp"/>

    <Button
        android:id="@+id/botao_tabela"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_tabela"
        android:padding="15dp"
        android:layout_margin="20dp"/>

    <Button
        android:id="@+id/botao_sair"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_sair"
        android:padding="15dp"
        android:layout_marginTop="300dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        />

</LinearLayout>